--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,9 @@ env:
       JAVA_HOME: "/usr/lib/jvm/java-17-amazon-corretto/"  
 phases:
  install:
+ runtime-versions:
+      java: openjdk8
+
         commands:
             - apt-get update; apt-get install -y java-17-amazon-corretto-jdk
             - update-alternatives --auto javac
