--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,10 +27,10 @@ phases:
  build:
     commands:
       - mvn test     
-      - mvn verify sonar:sonar -Dsonar.login=01ec293417fd7d9627f108e056abd42aa69e6102 -Dsonar.host.url=https://sonarcloud.io -Dsonar.projectKey=gcpvulprojectkey -Dsonar.organization=gcpsourcecode
+      - mvn verify sonar:sonar -Dsonar.login=282604792c775273e969bdc1689525324926d2cd -Dsonar.host.url=https://sonarcloud.io -Dsonar.projectKey=anusmithapatnaik_aws_samplecode -Dsonar.organization=awskey
       #- mvn verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.projectKey=gcpvulprojectkey -Dsonar.organization=gcpsourcecode
       - sleep 5
-      - curl https://sonarcloud.io/api/qualitygates/project_status?projectKey=gcpvulprojectkey >result.json
+      - curl https://sonarcloud.io/api/qualitygates/project_status?projectKey=anusmithapatnaik_aws_samplecode >result.json
       - cat result.json
       - if [ $(jq -r '.projectStatus.status' result.json) = ERROR ] ; then $CODEBUILD_BUILD_SUCCEEDING -eq 0 ;fi
       
