--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,8 @@ env:
       JAVA_HOME: "/usr/lib/jvm/java-17-amazon-corretto/"  
 phases:
  install:
-    
+    runtime-versions:
+      java: openjdk8
     commands:
        #- java openjdk8
        - apt-get update; apt-get install -y java-17-amazon-corretto-jdk
@@ -27,8 +28,8 @@ phases:
  build:
     commands:
       #- mvn test 
-      - mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=anusmithapatnaik_aws_samplecode
-      #- mvn verify sonar:sonar -Dsonar.SONAR_TOKEN=282604792c775273e969bdc1689525324926d2cd -Dsonar.host.url=https://sonarcloud.io -Dsonar.projectKey=anusmithapatnaik_aws_samplecode -Dsonar.organization=awskey
+      #- mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=anusmithapatnaik_aws_samplecode
+      - mvn verify sonar:sonar -Dsonar.SONAR_TOKEN=282604792c775273e969bdc1689525324926d2cd -Dsonar.host.url=https://sonarcloud.io -Dsonar.projectKey=anusmithapatnaik_aws_samplecode -Dsonar.organization=awskey
       #- mvn verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.projectKey=gcpvulprojectkey -Dsonar.organization=gcpsourcecode
       - sleep 5
       - curl https://sonarcloud.io/api/qualitygates/project_status?projectKey=anusmithapatnaik_aws_samplecode >result.json
