--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,8 +7,8 @@ env:
       JAVA_HOME: "/usr/lib/jvm/java-17-amazon-corretto/"  
 phases:
  install:
-    runtime-versions:
-      java: openjdk8
+    #runtime-versions:
+      #java: openjdk8
     commands:
        #- java openjdk8
        - apt-get update; apt-get install -y java-17-amazon-corretto-jdk
