--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,10 @@
             <artifactId>nd4j-common</artifactId>
             <version>1.0.0-beta2</version>
         </dependency>
-     <properties>
-        <sonar.organization>awskey</sonar.organization>
-        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-     </properties>
+     #<properties>
+        #<sonar.organization>awskey</sonar.organization>
+        #<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+     #</properties>
 <!--#Change 1 - Changes for Unit Test Coverage Percentage Update on SonarCloud Dashboard
 #By ASecurityGuru
 #5/11/2022 11:14 AM IST
