--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,7 @@ env:
       #TOKEN: prod/secret:LOGIN
     variables:
       JAVA_HOME: "/usr/lib/jvm/java-17-amazon-corretto/"  
+      SONAR_TOKEN: 71e481d427f794a0711cec3cf2769ee57f66ffda
 phases:
  install:
     #runtime-versions:
@@ -27,33 +28,34 @@ phases:
       - export PATH=$PATH:/sonar-scanner-3.3.0.1492-linux/bin/
  build:
     commands:
-      - mvn test 
+        - mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=awsvul
+      #- mvn test 
       #- mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=anusmithapatnaik_aws_samplecode
-      - mvn verify sonar:sonar -Dsonar.login=f369b2d37c97d18acfdf87980d02e2d3bb01f656 -Dsonar.host.url=https://sonarcloud.io -Dsonar.projectKey=anusmithapatnaik_aws_samplecode -Dsonar.organization=awskey
+      #- mvn verify sonar:sonar -Dsonar.login=f369b2d37c97d18acfdf87980d02e2d3bb01f656 -Dsonar.host.url=https://sonarcloud.io -Dsonar.projectKey=anusmithapatnaik_aws_samplecode -Dsonar.organization=awskey
       #- mvn verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.projectKey=gcpvulprojectkey -Dsonar.organization=gcpsourcecode
-      - sleep 5
-      - curl https://sonarcloud.io/api/qualitygates/project_status?projectKey=anusmithapatnaik_aws_samplecode >result.json
-      - cat result.json
-      - if [ $(jq -r '.projectStatus.status' result.json) = ERROR ] ; then $CODEBUILD_BUILD_SUCCEEDING -eq 0 ;fi
+      #- sleep 5
+      #- curl https://sonarcloud.io/api/qualitygates/project_status?projectKey=anusmithapatnaik_aws_samplecode >result.json
+      #- cat result.json
+      #- if [ $(jq -r '.projectStatus.status' result.json) = ERROR ] ; then $CODEBUILD_BUILD_SUCCEEDING -eq 0 ;fi
       
-      - |-
-        apt-get update
-        apt-get -y install maven 
-        SNYK_TOKEN=9e20a81b-00ce-4a0c-9b83-eaf080ee5412
-        export SNYK_TOKEN
-        mvn snyk:test -fn 
+      #- |-
+        #apt-get update
+        #apt-get -y install maven 
+        #SNYK_TOKEN=9e20a81b-00ce-4a0c-9b83-eaf080ee5412
+        #export SNYK_TOKEN
+        #mvn snyk:test -fn 
 
    
-      - |-
-        apt-get update
-        apt-get -y install wget
-        apt-get -y install default-jdk
-        wget https://github.com/zaproxy/zaproxy/releases/download/v2.11.1/ZAP_2.11.1_Linux.tar.gz
-        mkdir zap
-        tar -xvf ZAP_2.11.1_Linux.tar.gz
-        cd ZAP_2.11.1
-        ./zap.sh -cmd -quickurl https://demo.testfire.net/ -quickprogress -quickout ../zap_report.html 
-artifacts:
-  files:
-    - zap_report.html      
+      #- |-
+        #apt-get update
+        #apt-get -y install wget
+        #apt-get -y install default-jdk
+        #wget https://github.com/zaproxy/zaproxy/releases/download/v2.11.1/ZAP_2.11.1_Linux.tar.gz
+        #mkdir zap
+        #tar -xvf ZAP_2.11.1_Linux.tar.gz
+        #cd ZAP_2.11.1
+        #./zap.sh -cmd -quickurl https://demo.testfire.net/ -quickprogress -quickout ../zap_report.html 
+#artifacts:
+  #files:
+    #- zap_report.html      
     #success
