--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,17 +4,17 @@ env:
     #secrets-manager:
       #TOKEN: prod/secret:LOGIN
     variables:
-      JAVA_HOME: "/usr/lib/jvm/java-17-amazon-corretto/"  
+      #JAVA_HOME: "/usr/lib/jvm/java-17-amazon-corretto/"  
       SONAR_TOKEN: 71e481d427f794a0711cec3cf2769ee57f66ffda
 phases:
- install:
+ #install:
     #runtime-versions:
       #java: openjdk8
-    commands:
+    #commands:
        #- java openjdk8
-       - apt-get update; apt-get install -y java-17-amazon-corretto-jdk
-       - update-alternatives --auto javac
-       - update-alternatives --auto java
+       #- apt-get update; apt-get install -y java-17-amazon-corretto-jdk
+       #- update-alternatives --auto javac
+       #- update-alternatives --auto java
 
  #pre_build:
     #commands:
