--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,39 +4,39 @@ env:
     #secrets-manager:
       #TOKEN: prod/secret:LOGIN
     variables:
-      #JAVA_HOME: "/usr/lib/jvm/java-17-amazon-corretto/"  
+      JAVA_HOME: "/usr/lib/jvm/java-17-amazon-corretto/"  
       SONAR_TOKEN: 28e710bc3e5213b1f71c9a19b8bece047e08e466
 phases:
- #install:
+ install:
     #runtime-versions:
       #java: openjdk8
-    #commands:
+    commands:
        #- java openjdk8
-       #- apt-get update; apt-get install -y java-17-amazon-corretto-jdk
-       #- update-alternatives --auto javac
-       #- update-alternatives --auto java
+       - apt-get update; apt-get install -y java-17-amazon-corretto-jdk
+       - update-alternatives --auto javac
+       - update-alternatives --auto java
 
- #pre_build:
-    #commands:
-      #- apt-get update
-      #- apt-get install -y jq
-      #- wget http://www-eu.apache.org/dist/maven/maven-3/3.5.4/binaries/apache-maven-3.5.4-bin.tar.gz
-      #- tar xzf apache-maven-3.5.4-bin.tar.gz
-      #- ln -s apache-maven-3.5.4 maven
-      #- wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-3.3.0.1492-linux.zip
-      #- unzip ./sonar-scanner-cli-3.3.0.1492-linux.zip
-      #- export PATH=$PATH:/sonar-scanner-3.3.0.1492-linux/bin/
+  pre_build:
+    commands:
+      - apt-get update
+      - apt-get install -y jq
+      - wget http://www-eu.apache.org/dist/maven/maven-3/3.5.4/binaries/apache-maven-3.5.4-bin.tar.gz
+      - tar xzf apache-maven-3.5.4-bin.tar.gz
+      - ln -s apache-maven-3.5.4 maven
+      - wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-3.3.0.1492-linux.zip
+      - unzip ./sonar-scanner-cli-3.3.0.1492-linux.zip
+      - export PATH=$PATH:/sonar-scanner-3.3.0.1492-linux/bin/
    build:
      commands:
-        mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=anusmithapatnaik_DWVA-New -Dsonar.organization=awskey -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
+       - mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=anusmithapatnaik_DWVA-New -Dsonar.organization=awskey -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
       #- mvn test 
       #- mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=anusmithapatnaik_aws_samplecode
       #- mvn verify sonar:sonar -Dsonar.login=f369b2d37c97d18acfdf87980d02e2d3bb01f656 -Dsonar.host.url=https://sonarcloud.io -Dsonar.projectKey=anusmithapatnaik_aws_samplecode -Dsonar.organization=awskey
       #- mvn verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.projectKey=gcpvulprojectkey -Dsonar.organization=gcpsourcecode
-      #- sleep 5
-      #- curl https://sonarcloud.io/api/qualitygates/project_status?projectKey=anusmithapatnaik_aws_samplecode >result.json
-      #- cat result.json
-      #- if [ $(jq -r '.projectStatus.status' result.json) = ERROR ] ; then $CODEBUILD_BUILD_SUCCEEDING -eq 0 ;fi
+       - sleep 5
+       - curl https://sonarcloud.io/api/qualitygates/project_status?projectKey=anusmithapatnaik_aws_samplecode >result.json
+       - cat result.json
+       - if [ $(jq -r '.projectStatus.status' result.json) = ERROR ] ; then $CODEBUILD_BUILD_SUCCEEDING -eq 0 ;fi
       
       #- |-
         #apt-get update
