--- a/pom.xml
+++ b/pom.xml
@@ -3,16 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>maven_try</groupId>
-    <artifactId>maven_try</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <groupId>org.example</groupId>
+    <artifactId>anusmithapatnaik_DWVA-New</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
-    <properties>
-      <sonar.organization>sonarcloud09</sonar.organization>
-      <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.organization>sonarcloud09</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>    
+      
     </properties>     
     <dependencies>
         <dependency>
